--- a/โปรเจคสะท้านโลกหล้านภาลัย/mainstyle.css
+++ b/โปรเจคสะท้านโลกหล้านภาลัย/mainstyle.css
@@ -1,8 +1,14 @@
-.z{
+#headerJumbo{
+  text-align: center;
+  background-color: #007BFF;
+  color: white;
+}
+#headPan{
   height: 100px;
 }
+
 .header{
-  background-color: #00aeff;
+  background-color: #007BFF;
 }
 .a{
   margin-top: 40px;
@@ -12,20 +18,29 @@
   margin-top: 40px;
   margin-left: 200px;
 }
-.b{
-  height: 600px;
+#sidePan{
+  /*height: 600px;*/
   color: white;
   margin-bottom: 1px;
   background-color: lightgray;
 }
-.c{
+#centerPan{
   height: 800px;
   color: white;
   margin-bottom: 1px;
   background-color: white;
-
 }
 .search{
   margin-top: 30px;
-  
+
+}
+#proPan{
+  /*margin-top: 20px;*/
+  color: black;
+  background-color: lightgray;
+  margin-left: 7%;
+  height: 600px;
+}
+#eachPro{
+  margin-top: 20px;
 }
